Cambio a navegación y correcciones menores

--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,11 +1,11 @@
 <nav>
     <div>
-        <a href="../index.html">Página principal</a>
-        <a href="../pages/inicioSesionUsuario.html">Iniciar sesión usuario</a>
-        <a href="../pages/registroUsuario.html">Registrarse usuario</a>
-        <a href="../pages/agendarCita.html">Agendar mantenimiento</a>
-        <a href="../pages/inicioSesionTecnico.html">Iniciar sesion tecnico</a>
-        <a href="../pages/registroTecnico.html">Registro para Tecnico</a>
-        <a href="../pages/citasTecnico.html">Mantenimientos para realizar</a>
+        <a href="../index.html" target="_parent">Página principal</a>
+        <a href="../pages/inicioSesionUsuario.html" target="_parent">Iniciar sesión usuario</a>
+        <a href="../pages/registroUsuario.html" target="_parent">Registrarse usuario</a>
+        <a href="../pages/agendarCita.html" target="_parent">Agendar mantenimiento</a>
+        <a href="../pages/inicioSesionTecnico.html" target="_parent">Iniciar sesion tecnico</a>
+        <a href="../pages/registroTecnico.html" target="_parent">Registro para Tecnico</a>
+        <a href="../pages/citasTecnico.html" target="_parent">Mantenimientos para realizar</a>
     </div>
 </nav>
