Cambios para navegar mejor

--- a/components/principal.html
+++ b/components/principal.html
@@ -1,11 +1,11 @@
 <!--Todo va con imagenes esto es solo la distribución de las cosas-->
 <table>
     <tr>
-        <td><a href="../pages/inicioSesionUsuario.html">Inicio de Sesión (Usuario)</a></td>
-        <td><a href="../pages/registroUsuario.html">Registrarse (Usuario)</a></td>
+        <td><a href="../pages/inicioSesionUsuario.html" target="_parent">Inicio de Sesión (Usuario)</a></td>
+        <td><a href="../pages/registroUsuario.html" target="_parent">Registrarse (Usuario)</a></td>
     </tr>
     <tr>
-        <td><a href="../pages/inicioSesionTecnico.html">Inicio de Sesión (Tecnico)</a></td>
-        <td><a href="../pages/registroTecnico.html">Registrarse (Tecnico)</a></td>
+        <td><a href="../pages/inicioSesionTecnico.html" target="_parent">Inicio de Sesión (Tecnico)</a></td>
+        <td><a href="../pages/registroTecnico.html" target="_parent">Registrarse (Tecnico)</a></td>
     </tr>
 </table>
