--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,6 +1,6 @@
 <nav>
     <div>
-        <a href="../index.html" target="_parent">Página principal</a>
+        <a href="../pages/paginaPrincipal.html" target="_parent">Página principal</a>
         <a href="../pages/inicioSesionUsuario.html" target="_parent">Iniciar sesión usuario</a>
         <a href="../pages/registroUsuario.html" target="_parent">Registrarse usuario</a>
         <a href="../pages/agendarCita.html" target="_parent">Agendar mantenimiento</a>
