Botones de cancelar

--- a/components/formularios/agendarCitasForm.html
+++ b/components/formularios/agendarCitasForm.html
@@ -31,5 +31,5 @@
     <input type="checkbox" name="inspeccionarfrenos" id="inspeccionarfrenos">
     <label for="7">Inspeccionar frenos</label><br>
     <input type="submit" value=" Agendar Cita">
-
+    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
 </form>
