--- a/components/formularios/registroUsuarioForm.html
+++ b/components/formularios/registroUsuarioForm.html
@@ -36,15 +36,13 @@
         <option value="Media">Media</option>
         <option value="Alta">Alta</option>
     </select>
-    
     <br>
-    
     <label for="username">Usuario</label>
     <input type="text" name="username" id="name" placeholder="Ingrese usuario">
     <br>
     <label for="password">Contrasena</label>
     <input type="password" name="password" id="password" placeholder="Ingrese contrasena">
     <br>
-
     <input type="submit" value="Crear Usuario">
+    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
 </form>
