--- a/components/formularios/registroTecnicoForm.html
+++ b/components/formularios/registroTecnicoForm.html
@@ -15,4 +15,5 @@
     <input type="password" name="password" id="password" placeholder="Ingrese contrasena">
     <br>
     <input type="submit" value="Crear tecnico">
+    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
 </form>
