Correción en campos de inicio de sesión

--- a/components/formularios/iniciosesiontecnico.html
+++ b/components/formularios/iniciosesiontecnico.html
@@ -1,6 +1,6 @@
 <form action="#" method="POST" target="_blank">
-    <label for="name">Nombre completo</label>
-    <input type="text" name="name" id="name" placeholder="Ingrese su nombre">
+    <label for="name">Cédula</label>
+    <input type="text" name="name" id="name" placeholder="Ingrese su cédula">
     <br>
     <label for="password">Contrasena</label>
     <input type="password" name="password" id="password" placeholder="Ingrese contrasena">
