--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,11 +1,11 @@
 <nav>
     <div>
-        <a href="../pages/paginaPrincipal.html" target="_parent">Página principal</a>
-        <a href="../pages/inicioSesionUsuario.html" target="_parent">Iniciar sesión usuario</a>
-        <a href="../pages/registroUsuario.html" target="_parent">Registrarse usuario</a>
-        <a href="../pages/agendarCita.html" target="_parent">Agendar mantenimiento</a>
-        <a href="../pages/inicioSesionTecnico.html" target="_parent">Iniciar sesion tecnico</a>
-        <a href="../pages/registroTecnico.html" target="_parent">Registro para Tecnico</a>
-        <a href="../pages/citasTecnico.html" target="_parent">Mantenimientos para realizar</a>
+        <a href="../pages/paginaPrincipal.html" target="_parent" <button type="button" class="miColorBoton btn btn-primary"></button>>Página principal</a>
+        <a href="../pages/inicioSesionUsuario.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Iniciar sesión usuario</a>
+        <a href="../pages/registroUsuario.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Registrarse usuario</a>
+        <a href="../pages/agendarCita.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Agendar mantenimiento</a>
+        <a href="../pages/inicioSesionTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Iniciar sesion tecnico</a>
+        <a href="../pages/registroTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Registro para Tecnico</a>
+        <a href="../pages/citasTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Mantenimientos para realizar</a>
     </div>
 </nav>
