estilo del navegador

--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,11 +1,14 @@
 <nav>
+<link rel="stylesheet" href="../css/estilos.css">
     <div>
-        <a href="../pages/paginaPrincipal.html" target="_parent">Página principal</a>
-        <a href="../pages/inicioSesionUsuario.html" target="_parent">Iniciar sesión usuario</a>
-        <a href="../pages/registroUsuario.html" target="_parent">Registrarse usuario</a>
-        <a href="../pages/agendarCita.html" target="_parent">Agendar mantenimiento</a>
-        <a href="../pages/inicioSesionTecnico.html" target="_parent">Iniciar sesion tecnico</a>
-        <a href="../pages/registroTecnico.html" target="_parent">Registro para Tecnico</a>
-        <a href="../pages/citasTecnico.html" target="_parent">Mantenimientos para realizar</a>
+    <ul>
+       <li> <a href="../pages/paginaPrincipal.html" target="_parent">Página principal</a></li>
+       <li> <a href="../pages/inicioSesionUsuario.html" target="_parent">Iniciar sesión usuario</a></li> 
+       <li> <a href="../pages/registroUsuario.html" target="_parent">Registrarse usuario</a></li> 
+       <li> <a href="../pages/agendarCita.html" target="_parent">Agendar mantenimiento</a></li>
+       <li> <a href="../pages/inicioSesionTecnico.html" target="_parent">Iniciar sesion tecnico</a></li>
+       <li> <a href="../pages/registroTecnico.html" target="_parent">Registro para Tecnico</a></li>
+       <li> <a href="../pages/citasTecnico.html" target="_parent">Mantenimientos para realizar</a></li>
+    </ul>
     </div>
 </nav>
