Primer cambio de estilos

--- a/components/principal.html
+++ b/components/principal.html
@@ -1,11 +1,33 @@
 <!--Todo va con imagenes esto es solo la distribución de las cosas-->
-<table>
-    <tr>
-        <td><a href="../pages/inicioSesionUsuario.html" target="_parent">Inicio de Sesión (Usuario)</a></td>
-        <td><a href="../pages/registroUsuario.html" target="_parent">Registrarse (Usuario)</a></td>
+<link rel="stylesheet" href="../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo">
+<table class="table-hover m-2 border-0 border-dark rounded">
+    <tr class="d-md-table-row border border-top-0 border-right-0 border-left-0 border-dark rounded">
+        <td class="border border-dark micolorLetras rounded border-left-0 border-top-0">
+            <p class="pr-2">Usuario</p>
+        </td>
+        <td class="d-md-table-cell">
+            <a href="../pages/inicioSesionUsuario.html" target="_parent" data-toggle="popover" title="Inicio de sesión para el usuario" data-content="Popup content">
+                <img src="../img/inicioUsuario.png" height="500px" class="rounded-pill ml-5 p-sm-5" alt="Inicio de Sesión (Usuario)"></a>
+        </td>
+        <td class="d-md-table-cell">
+            <a href="../pages/registroUsuario.html" target="_parent" data-toggle="popover" title="Registro para el usuario" data-content="Popup content">
+                <img src="../img/registroUsuario.png" height="500px" class="rounded-pill ml-5 p-sm-5" alt="Registrarse (Usuario)"></a>
+        </td>
     </tr>
-    <tr>
-        <td><a href="../pages/inicioSesionTecnico.html" target="_parent">Inicio de Sesión (Tecnico)</a></td>
-        <td><a href="../pages/registroTecnico.html" target="_parent">Registrarse (Tecnico)</a></td>
+    <tr class="d-md-table-row border border-bottom-0 border-right-0 border-left-0 border-dark rounded">
+        <td class="border border-dark border-left-0 border-bottom-0 rounded">
+            <p class="micolorLetras">Tecnico</p>
+        </td>
+        <td class="d-md-table-cell">
+            <a href="../pages/inicioSesionTecnico.html" target="_parent" data-toggle="popover" title="Inicio de sesión para el técnico" data-content="Popup content">
+                <img src="../img/inicioTecnico.png" height="200px" class="rounded-circle ml-5 p-sm-5" alt="Inicio de Sesión (Tecnico)"></a>
+        </td>
+        <td class="d-md-table-cell">
+            <a href="../pages/registroTecnico.html" target="_parent" data-toggle="popover" title="Registro para el técnico" data-content="Popup content">
+                <img src="../img/registroTecnico.png" height="200px" class="rounded-circle ml-5 p-sm-5" alt="Registrarse (Tecnico)"></a>
+        </td>
     </tr>
 </table>
+</body>
