--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,11 +1,36 @@
-<nav>
-    <div>
-        <a href="../pages/paginaPrincipal.html" target="_parent" <button type="button" class="miColorBoton btn btn-primary"></button>>Página principal</a>
-        <a href="../pages/inicioSesionUsuario.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Iniciar sesión usuario</a>
-        <a href="../pages/registroUsuario.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Registrarse usuario</a>
-        <a href="../pages/agendarCita.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Agendar mantenimiento</a>
-        <a href="../pages/inicioSesionTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Iniciar sesion tecnico</a>
-        <a href="../pages/registroTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Registro para Tecnico</a>
-        <a href="../pages/citasTecnico.html" target="_parent" <button type="button" class="btn btn-primary miColorBoton"></button>>Mantenimientos para realizar</a>
-    </div>
-</nav>
+<link rel="stylesheet" href="../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo">
+    <nav>
+        <div>
+            <a href="../pages/paginaPrincipal.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Página principal
+                </button></a>
+            <a href="../pages/inicioSesionUsuario.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Iniciar sesión usuario
+                </button></a>
+            <a href="../pages/registroUsuario.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Registrarse usuario
+                </button></a>
+            <a href="../pages/agendarCita.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Agendar mantenimiento
+                </button></a>
+            <a href="../pages/inicioSesionTecnico.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Iniciar sesion tecnico
+                </button></a>
+            <a href="../pages/registroTecnico.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Registro para Tecnico
+                </button></a>
+            <a href="../pages/citasTecnico.html" target="_parent">
+                <button type="button" class="btn btn-primary miColorBoton">
+                    Mantenimientos para realizar
+                </button></a>
+        </div>
+    </nav>
+</body>
