--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -2,33 +2,33 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <body class="miColorFondo">
     <nav>
-        <div>
+        <div class="micolorLetras">
             <a href="../pages/paginaPrincipal.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Página principal
                 </button></a>
             <a href="../pages/inicioSesionUsuario.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Iniciar sesión usuario
                 </button></a>
             <a href="../pages/registroUsuario.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Registrarse usuario
                 </button></a>
             <a href="../pages/agendarCita.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Agendar mantenimiento
                 </button></a>
             <a href="../pages/inicioSesionTecnico.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Iniciar sesion tecnico
                 </button></a>
             <a href="../pages/registroTecnico.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Registro para Tecnico
                 </button></a>
             <a href="../pages/citasTecnico.html" target="_parent">
-                <button type="button" class="btn btn-primary miColorBoton">
+                <button type="button" class="miBoton">
                     Mantenimientos para realizar
                 </button></a>
         </div>
