Diseño a inicio de sesion del tecnico

--- a/components/formularios/iniciosesionusuario.html
+++ b/components/formularios/iniciosesionusuario.html
@@ -5,7 +5,7 @@
     <form>
         <div class="form-group">
           <label for="Usuario">Usuario</label>
-          <input type="user" class="form-control" id="Usuario" aria-describedby="inputUsuario" placeholder="ingrese su usuario">
+          <input type="user" class="form-control" id="Usuario" placeholder="ingrese su usuario">
         </div>
         <div class="form-group">
           <label for="contraseña">Contraseña</label>
