--- a/components/formularios/agendarCitasForm.html
+++ b/components/formularios/agendarCitasForm.html
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="../../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo">
+<h3 class="micolorLetras">AGENDAMIENTO DE CITAS</h3>
 <form action="#" method="post" target="_blank">
 
     <label for="date">Fecha</label> <br>
@@ -33,3 +37,4 @@
     <input type="submit" value=" Agendar Cita">
     <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
 </form>
+</body>
