--- a/components/formularios/iniciosesiontecnico.html
+++ b/components/formularios/iniciosesiontecnico.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../css/estilos.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <body class="miColorFondo">
-    <h3 class="micolorLetras">Inicio de sesión</h3>
+    <h3 class="micolorLetras">Inicio de sesión Técnico</h3>
     <form>
         <div class="form-group">
             <label for="cedula">Cédula</label>
