--- a/components/formularios/iniciosesionusuario.html
+++ b/components/formularios/iniciosesionusuario.html
@@ -1,18 +1,18 @@
 <link rel="stylesheet" href="../../css/estilos.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <body class="miColorFondo">
-    <h3 class="micolorLetras">Inicio de sesión</h3>
+    <h3 class="micolorLetras">Inicio de sesión Usuario</h3>
     <form>
         <div class="form-group">
           <label for="Usuario">Usuario</label>
           <input type="user" class="form-control" id="Usuario" placeholder="ingrese su usuario">
         </div>
         <div class="form-group">
-          <label for="contraseña">Contraseña</label>
-          <input type="password" class="form-control" id="contraseña" placeholder="digite su contraseña">
+          <label for="contrasena">Contraseña</label>
+          <input type="password" class="form-control" id="contrasena" placeholder="digite su contraseña">
         </div>
         <br>
-        <a href="../../pages/agendarCita.html" target="_parent"><input type="submit" class="miBoton" value="Iniciar Sesión"></a>
+        <a href="../../pages/agendarCita.html" target="_parent"><input type="submit" class="miBoton" value="Iniciar Sesion"></a>
         <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a>
         <br>
         <a href="../../pages/registroUsuario.html" target="_parent" class="micolorLetras"> ¿Todavía no tienes una cuenta?. Creala aqui</a>
