--- a/components/formularios/registroTecnicoForm.html
+++ b/components/formularios/registroTecnicoForm.html
@@ -1,19 +1,38 @@
-<form action="#" method="POST" target="_blank">
-    <label for="name">Nombre completo</label>
-    <input type="text" name="name" id="name" placeholder="Ingrese su nombre">
-    <br>
-    <label for="cedula">Cedula</label>
-    <input type=" tel" name="cedula" id="cedula" placeholder="Numero de cedula">
-    <br>
-    <label for="telefono">Telefono</label>
-    <input type="tel" name="telefono" id="telefono" placeholder="Numero de telefono">
-    <br>
-    <label for="email">Correo</label>
-    <input type="email" name="email" id="email" placeholder="Ingrese su correo">
-    <br>
-    <label for="password">Contrasena</label>
-    <input type="password" name="password" id="password" placeholder="Ingrese contrasena">
-    <br>
-    <input type="submit" value="Crear tecnico">
-    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
-</form>
+<link rel="stylesheet" href="../../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo">
+    <h3 class="micolorLetras">Registro Usuario: Técnico</h3>
+
+        <form action="#" method="POST" target="_blank">
+            
+                <div class="form-group ">
+                    <label for="name">Nombre completo</label>
+                    <input type="text" id="name" class ="form-control" placeholder="Ingrese su nombre">
+                </div>
+                <div class="form-group ">
+                    <label for="cedula">Cedula</label>
+                    <input type="text"  id="cedula" class="form-control" placeholder="Ingrese su cédula">
+                </div>
+            
+            
+                <div class="form-group">                
+                    <label for="telefono">Telefono</label>
+                    <input type="tel" class="form-control"  id="telefono" placeholder="Numero de telefono">
+                </div>
+               
+                <div class="form-group">    
+                    <label for="password">Contrasena</label>
+                    <input type="password" class="form-control" id="password" placeholder="digite su contraseña">
+                </div>
+            
+            <div class="form-group ">   
+                <label for="email">Correo</label>
+                <input type="email" class="form-control" id="email" placeholder="Ingrese su correo">
+            </div>
+            <br>
+            <input type="submit" class="miBoton" value="Crear tecnico">
+            
+            <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a> <br>
+            <a href="./inicioSesionTecnico.html">¿Ya tienes una cuenta? Inicia sesión aqui</a>
+        </form>
+</body>
