--- a/components/formularios/registroUsuarioForm.html
+++ b/components/formularios/registroUsuarioForm.html
@@ -1,48 +1,61 @@
-<form action="#" method="POST" target="_blank">
-    <label for="name">Nombre completo</label>
-    <input type="text" name="name" id="name" placeholder="Ingrese su nombre">
-    <br>
-    <label for="telefono">Telefono</label>
-    <input type="tel" name="telefono" id="telefono" placeholder="Numero de telefono">
-    <br>
-    <label for="email">Correo</label>
-    <input type="email" name="email" id="email" placeholder="Ingrese su correo">
-    <br>
+<link rel="stylesheet" href="../../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo">
+    <h3 class="micolorLetras">Registro Usuario: Cliente</h3>
 
-    <label for="marca">Marca de la bicicleta</label>
-    <input type="text" name="marca" id="marca" placeholder="Ingrese su marca">
-    <br>
-    <label for="numdecicla">Numero de bicicleta (Tamano)</label>
-    <select name="Numero de bicicleta" id="Numero de bicicleta">
-        <option value="">Seleccione</option>
-        <option value="10">10</option>
-        <option value="12">12</option>
-        <option value="14">14</option>
-        <option value="16">16</option>
-        <option value="18">18</option>
-        <option value="20">20</option>
-        <option value="22">22</option>
-        <option value="24">24</option>
-        <option value="26">26</option>
-        <option value="27,5">27,5</option>
-        <option value="29">29</option>
-    </select>
-    
-    <br>
-
-    <label for="gama">Tipo de Gama</label>
-    <select name="gama" id="gama">
-        <option value="Basico">Basico</option>
-        <option value="Media">Media</option>
-        <option value="Alta">Alta</option>
-    </select>
-    <br>
-    <label for="username">Usuario</label>
-    <input type="text" name="username" id="name" placeholder="Ingrese usuario">
-    <br>
-    <label for="password">Contrasena</label>
-    <input type="password" name="password" id="password" placeholder="Ingrese contrasena">
-    <br>
-    <input type="submit" value="Crear Usuario">
-    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
-</form>
+    <form action="#" method="POST" target="_blank">
+        <div class="form-group ">
+            <label for="name">Nombre completo</label>
+            <input type="text" class ="form-control" id="name" placeholder="Ingrese su nombre">
+        </div>
+        <div class="form-group ">    
+            <label for="telefono">Telefono</label>
+            <input type="tel" class ="form-control" id="telefono" placeholder="Numero de telefono">
+        </div>
+        <div class="form-group ">    
+            <label for="email">Correo</label>
+            <input type="email" class ="form-control" id="email" placeholder="Ingrese su correo">
+        </div>
+        <div class="form-group ">
+            <label for="marca">Marca de la bicicleta</label>
+            <input type="text" class ="form-control" id="marca" placeholder="Ingrese su marca">
+        </div>
+        <div class="form-group ">    
+            <label for="numdecicla">Numero de bicicleta (Tamano)</label>
+            <select name="Numero de bicicleta" id="Numero de bicicleta">
+                <option value="">Seleccione</option>
+                <option value="10">10</option>
+                <option value="12">12</option>
+                <option value="14">14</option>
+                <option value="16">16</option>
+                <option value="18">18</option>
+                <option value="20">20</option>
+                <option value="22">22</option>
+                <option value="24">24</option>
+                <option value="26">26</option>
+                <option value="27,5">27,5</option>
+                <option value="29">29</option>
+            </select>
+        </div>        
+        <div class="form-group ">
+            <label for="gama">Tipo de Gama</label>
+                <select name="gama" id="gama">
+                    <option value="Basico">Basico</option>
+                    <option value="Media">Media</option>
+                    <option value="Alta">Alta</option>
+                </select>
+        </div>
+        <div class="form-group ">
+            <label for="username">Usuario</label>
+            <input type="text" class ="form-control" id="name" placeholder="Ingrese usuario">
+        </div>
+        <div class="form-group ">
+            <label for="password">Contrasena</label>
+            <input type="password" class ="form-control" id="password" placeholder="Ingrese contrasena">
+        </div>
+        <br>
+        <input type="submit" class="miBoton" value="Crear Usuario">
+        <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a> <br>
+        <a href="./inicioSesionUsuario.html">¿Ya tienes una cuenta? Inicia sesión aqui</a>
+    </form>
+</body>
