--- a/components/formularios/agendarCitasForm.html
+++ b/components/formularios/agendarCitasForm.html
@@ -1,40 +1,72 @@
 <link rel="stylesheet" href="../../css/estilos.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <body class="miColorFondo">
-<h3 class="micolorLetras">AGENDAMIENTO DE CITAS</h3>
-<form action="#" method="post" target="_blank">
-
-    <label for="date">Fecha</label> <br>
-    <input type="date" name="date" id="date"><br>
-   
-    <label for="hora">Hora de la cita</label>
-    <select name="hora" id="hota">
-        <option value="">Seleccione</option>
-        <option value="1">8 am</option>
-        <option value="2">9 am</option>
-        <option value="3">10 am</option>
-        <option value="4">11 am</option>
-        <option value="5">2 pm</option>
-        <option value="6">3 pm</option>
-        <option value="7">4 pm</option>
-        <option value="8">5 pm</option>
-    <br>   
-    <label for="tipomantenimiento">Tipo de mantenimiento</label><br>
-    <input type="checkbox" name="Lavadoaprofundidad" id="Lavadoaprofundidad">
-    <label for="1">Lavado a profundidad</label><br>
-    <input type="checkbox" name="Lubricaciondecadena" id="Lubricaciondecadena">
-    <label for="2">Lubricacion de cadena</label><br>
-    <input type="checkbox" name="revisionaire" id="revisionaire">
-    <label for="3">Revision presión del aire</label><br>
-    <input type="checkbox" name="nivelarruedas" id="nivelarruedas">
-    <label for="4">Nivelar ruedas</label><br>
-    <input type="checkbox" name="buscarobjetosincrustados" id="buscarobjetosincrustados">
-    <label for="5">Buscar objetos incrustados</label><br>
-    <input type="checkbox" name="revisarajustes" id="revisarajustes">
-    <label for="6">Revisar ajustes de ruedas y asiento</label><br>
-    <input type="checkbox" name="inspeccionarfrenos" id="inspeccionarfrenos">
-    <label for="7">Inspeccionar frenos</label><br>
-    <input type="submit" value=" Agendar Cita">
-    <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" value="Cancelar"></a>
-</form>
+    <form>
+        <h3 class="micolorLetras">AGENDAMIENTO DE CITAS</h3>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <label class="micolorLetras" for="date">Fecha</label>
+                <input type="date" name="date" id="date">
+            </div>
+            <div class="form-group col-6">
+                <label class="micolorLetras" for="hora">Hora de la cita</label>
+                <select name="hora" id="hora">
+                    <option value="">Seleccione</option>
+                    <option value="1">8 am a 9 am</option>
+                    <option value="2">9 am a 10 am</option>
+                    <option value="3">10 am a 11 am</option>
+                    <option value="4">11 am a 12 m</option>
+                    <option value="5">1 pm a 2 pm</option>
+                    <option value="6">2 pm a 3 pm</option>
+                    <option value="7">3 pm a 4 pm</option>
+                    <option value="8">4 pm a 5 pm</option>
+                </select>
+            </div>
+        </div>
+        <h3 class="miColorLetras">Servicios</h3>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="checkbox" name="lavadoaProfundidad" id="lavadoaProfundidad">
+                <label class="micolorLetras" for="1">Lavado a profundidad</label>
+            </div>
+            <div class="form-group col-5">
+                <input type="checkbox" name="lubricacionCadena" id="lubricacionCadena">
+                <label class="micolorLetras" for="2">Lubricacion de cadena</label>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="checkbox" name="revisionAire" id="revisionAire">
+                <label class="micolorLetras" for="3">Revision presión del aire</label>
+            </div>
+            <div class="form-group col-5">
+                <input type="checkbox" name="nivelarRuedas" id="nivelarRuedas">
+                <label class="micolorLetras" for="4">Nivelar ruedas</label>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="checkbox" name="buscarObjetosIncrustados" id="buscarObjetosIncrustados">
+                <label class="micolorLetras" for="5">Buscar objetos incrustados</label>
+            </div>
+            <div class="form-group col-6">
+                <input type="checkbox" name="revisarAjustes" id="revisarAjustes">
+                <label class="micolorLetras" for="6">Revisar ajustes de ruedas y asiento</label>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="checkbox" name="inspeccionarFrenos" id="inspeccionarFrenos">
+                <label class="micolorLetras" for="7">Inspeccionar frenos</label>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="submit" class="miBoton" value=" Agendar Cita">
+            </div>
+            <div class="form-group col-5">
+                <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a>
+            </div>
+        </div>
+    </form>
 </body>
