--- a/components/formularios/iniciosesionusuario.html
+++ b/components/formularios/iniciosesionusuario.html
@@ -4,11 +4,11 @@
     <h3 class="micolorLetras">Inicio de sesión Usuario</h3>
     <form>
         <div class="form-group">
-          <label for="Usuario">Usuario</label>
+          <label class="micolorLetras" for="Usuario">Usuario</label>
           <input type="user" class="form-control" id="Usuario" placeholder="ingrese su usuario">
         </div>
         <div class="form-group">
-          <label for="contrasena">Contraseña</label>
+          <label class="micolorLetras" for="contrasena">Contraseña</label>
           <input type="password" class="form-control" id="contrasena" placeholder="digite su contraseña">
         </div>
         <br>
