--- a/components/formularios/iniciosesiontecnico.html
+++ b/components/formularios/iniciosesiontecnico.html
@@ -4,11 +4,11 @@
     <h3 class="micolorLetras">Inicio de sesión Técnico</h3>
     <form>
         <div class="form-group">
-            <label for="cedula">Cédula</label>
+            <label class="micolorLetras" for="cedula">Cédula</label>
             <input type="text" class="form-control" id="cedula" placeholder="Ingrese su cédula">
         </div>
         <div class="form-group">
-            <label for="password">Contrasena</label>
+            <label class="micolorLetras" for="password">Contrasena</label>
             <input type="password" class="form-control" id="password" placeholder="digite su contraseña">
         </div>
         <br>
