--- a/components/formularios/manAgendoForm.html
+++ b/components/formularios/manAgendoForm.html
@@ -1,25 +1,47 @@
-<form action="#" method="post" target="_blank">
-    <table>
-        <tr>
-            <th><label for="fecha">Fecha agendada</label></th>
-            <th><output>Fecha(codigo js)</output></th>
-        </tr>
-        <tr>
-            <th><label for="hora">Hora de la cita</label></th>
-            <th><output>Hora(codigo js)</output></th>
-        </tr>
-        <tr>
-            <th><label for="problema">Razón de mantenimiento</label></th>
-            <th><output>Problema(codigo js)</output></th>
-        </tr>
-    </table>
-    <br>
-    <label for="cambioDeEstado">Favor seleccione el nuevo estado del mantenimiento</label>
-    <select name="listaEstado" id="estado">
-        <option value="0">En Mantenimiento</option>
-        <option value="1">Mantenimiento finalizado</option>
-        <option value="2">Mantenimiento no completado</option>
-    </select>
-    <br>
-    <input type="submit" value="Actualizar">
-</form>
+<link rel="stylesheet" href="../../css/estilos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<body class="miColorFondo mb-0">
+    <form class="mb-0 mt-2" action="#" method="post" target="_blank">
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <label class="micolorLetras" for="fecha">Fecha agendada</label>
+            </div>
+            <div class="form-group col-5">
+                <output>Fecha(codigo js)</output>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <label class="micolorLetras" for="hora">Hora de la cita</label>
+            </div>
+            <div class="form-group col-5">
+                <output>Hora(codigo js)</output>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <label class="micolorLetras" for="problema">Razón de mantenimiento</label>
+            </div>
+            <div class="form-group col-5">
+                <output>Problema(codigo js)</output>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <label class="micolorLetras" for="cambioDeEstado">Favor seleccione el nuevo estado del mantenimiento</label>
+            </div>
+            <div class="form-group col-5">
+                <select name="listaEstado" id="estado">
+                    <option value="0">En Mantenimiento</option>
+                    <option value="1">Mantenimiento finalizado</option>
+                    <option value="2">Mantenimiento no completado</option>
+                </select>
+            </div>
+        </div>
+        <div class="mr-1 ml-1 form-row">
+            <div class="form-group col-5">
+                <input type="submit" class="miBoton" value="Actualizar">
+            </div>
+        </div>
+    </form>
+</body>
