--- a/components/formularios/registroTecnicoForm.html
+++ b/components/formularios/registroTecnicoForm.html
@@ -6,33 +6,33 @@
         <form action="#" method="POST" target="_blank">
             
                 <div class="form-group ">
-                    <label for="name">Nombre completo</label>
+                    <label class="micolorLetras" for="name">Nombre completo</label>
                     <input type="text" id="name" class ="form-control" placeholder="Ingrese su nombre">
                 </div>
                 <div class="form-group ">
-                    <label for="cedula">Cedula</label>
+                    <label class="micolorLetras" for="cedula">Cedula</label>
                     <input type="text"  id="cedula" class="form-control" placeholder="Ingrese su cédula">
                 </div>
             
             
                 <div class="form-group">                
-                    <label for="telefono">Telefono</label>
+                    <label class="micolorLetras" for="telefono">Telefono</label>
                     <input type="tel" class="form-control"  id="telefono" placeholder="Numero de telefono">
                 </div>
                
                 <div class="form-group">    
-                    <label for="password">Contrasena</label>
+                    <label class="micolorLetras" for="password">Contrasena</label>
                     <input type="password" class="form-control" id="password" placeholder="digite su contraseña">
                 </div>
             
             <div class="form-group ">   
-                <label for="email">Correo</label>
+                <label class="micolorLetras" for="email">Correo</label>
                 <input type="email" class="form-control" id="email" placeholder="Ingrese su correo">
             </div>
             <br>
             <input type="submit" class="miBoton" value="Crear tecnico">
             
             <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a> <br>
-            <a href="./inicioSesionTecnico.html">¿Ya tienes una cuenta? Inicia sesión aqui</a>
+            <a href="./inicioSesionTecnico.html" class="micolorLetras">¿Ya tienes una cuenta? Inicia sesión aqui</a>
         </form>
 </body>
