--- a/components/formularios/registroUsuarioForm.html
+++ b/components/formularios/registroUsuarioForm.html
@@ -5,23 +5,23 @@
 
     <form action="#" method="POST" target="_blank">
         <div class="form-group ">
-            <label for="name">Nombre completo</label>
+            <label class="micolorLetras" for="name">Nombre completo</label>
             <input type="text" class ="form-control" id="name" placeholder="Ingrese su nombre">
         </div>
         <div class="form-group ">    
-            <label for="telefono">Telefono</label>
+            <label class="micolorLetras" for="telefono">Telefono</label>
             <input type="tel" class ="form-control" id="telefono" placeholder="Numero de telefono">
         </div>
         <div class="form-group ">    
-            <label for="email">Correo</label>
+            <label class="micolorLetras" for="email">Correo</label>
             <input type="email" class ="form-control" id="email" placeholder="Ingrese su correo">
         </div>
         <div class="form-group ">
-            <label for="marca">Marca de la bicicleta</label>
-            <input type="text" class ="form-control" id="marca" placeholder="Ingrese su marca">
+            <label class="micolorLetras" for="placa">Placa del marco</label>
+            <input type="text" class ="form-control" id="placa" placeholder="Ingrese la placa">
         </div>
         <div class="form-group ">    
-            <label for="numdecicla">Numero de bicicleta (Tamano)</label>
+            <label class="micolorLetras" for="numdecicla">Numero de bicicleta (Tamano)</label>
             <select name="Numero de bicicleta" id="Numero de bicicleta">
                 <option value="">Seleccione</option>
                 <option value="10">10</option>
@@ -38,7 +38,7 @@
             </select>
         </div>        
         <div class="form-group ">
-            <label for="gama">Tipo de Gama</label>
+            <label class="micolorLetras" for="gama">Tipo de Gama</label>
                 <select name="gama" id="gama">
                     <option value="Basico">Basico</option>
                     <option value="Media">Media</option>
@@ -46,16 +46,16 @@
                 </select>
         </div>
         <div class="form-group ">
-            <label for="username">Usuario</label>
+            <label class="micolorLetras" for="username">Usuario</label>
             <input type="text" class ="form-control" id="name" placeholder="Ingrese usuario">
         </div>
         <div class="form-group ">
-            <label for="password">Contrasena</label>
+            <label class="micolorLetras" for="password">Contrasena</label>
             <input type="password" class ="form-control" id="password" placeholder="Ingrese contrasena">
         </div>
         <br>
         <input type="submit" class="miBoton" value="Crear Usuario">
         <a href="../../pages/paginaPrincipal.html" target="_parent"><input type="button" class="miBoton" value="Cancelar"></a> <br>
-        <a href="./inicioSesionUsuario.html">¿Ya tienes una cuenta? Inicia sesión aqui</a>
+        <a href="./inicioSesionUsuario.html" class="micolorLetras" target="_parent">¿Ya tienes una cuenta? Inicia sesión aqui</a>
     </form>
 </body>
