--- a/layout/navegacion.html
+++ b/layout/navegacion.html
@@ -1,36 +1,59 @@
 <link rel="stylesheet" href="../css/estilos.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <body class="miColorFondo">
-    <nav>
-        <div class="micolorLetras">
-            <a href="../pages/paginaPrincipal.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Página principal
-                </button></a>
-            <a href="../pages/inicioSesionUsuario.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Iniciar sesión usuario
-                </button></a>
-            <a href="../pages/registroUsuario.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Registrarse usuario
-                </button></a>
-            <a href="../pages/agendarCita.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Agendar mantenimiento
-                </button></a>
-            <a href="../pages/inicioSesionTecnico.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Iniciar sesion tecnico
-                </button></a>
-            <a href="../pages/registroTecnico.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Registro para Tecnico
-                </button></a>
-            <a href="../pages/citasTecnico.html" target="_parent">
-                <button type="button" class="miBoton">
-                    Mantenimientos para realizar
-                </button></a>
+    <nav class="navbar navbar-expand-lg navbar-dark miColorNav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="../pages/paginaPrincipal.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Página principal
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/inicioSesionUsuario.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Iniciar sesión usuario
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/registroUsuario.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Registrarse usuario
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/agendarCita.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Agendar mantenimiento
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/inicioSesionTecnico.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Iniciar sesion tecnico
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/registroTecnico.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Registro para Tecnico
+                        </button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="../pages/citasTecnico.html" target="_parent">
+                        <button type="button" class="miBoton">
+                            Mantenimientos para realizar
+                        </button></a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
